--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,16 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 30px;
-}
-
-input {
+.text:nth-child(odd) {
+  background-color: #4d4d;
   padding: 10px;
-  margin: 15px;
-  border: 1px solid #2b1a3c;
-  border-radius: 15px;
-  width: 300px;
+  border-radius: 5px;
+  color: black;
 }
 
-input:focus {
-  outline: none;
+.text:nth-child(odd):hover {
+  cursor: pointer;
+  background-color: #ccc;
 }
 
-button {
-  padding: 10px;
-  width: 100px;
-  border-radius: 10px;
-  border: none;
-}
-
-button:hover {
-  transform: tr;
-}
-
-.result {
-  margin: 10px;
-  font-size: 1.2em;
+.link {
+  color: black;
+  text-decoration: none;
 }
