--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .text:nth-child(odd) {
-  background-color: #4d4d;
+  background-color: #1db954;
   padding: 3px;
   border-radius: 5px;
   color: black;
@@ -7,7 +7,7 @@
 
 .text:nth-child(odd):hover {
   cursor: pointer;
-  background-color: #ccc;
+  background-color: lightgray;
 }
 
 .link {
